# kisa

./: .gitignore  Makefile.in  README.org  configure  configure.in  dune-project  kisa.opam
regression/: Makefile.am  Makefile.in  dune  test001.ml  testFormatList.ml  testFormatSet.ml
src/: Makefile.am  Makefile.in  dune  format.ml  formatList.ml  formatSet.ml  while.ml
